# ruleman

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: CNAME  _config.yml  index.md  schema.json
npm/ruleman/: README.md  package.json
npm/scripts/: sync-version.mjs
src/: main.rs
