[package]
name = "ruleman"
version = "0.1.0"
edition = "2024"
description = "A static analysis tool that checks repository files against a declarative rule config."
license = "MIT"
repository = "https://github.com/codebase-jp/ruleman"

[[bin]]
name = "ruleman"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.26", features = ["serde"] }
